--- a/css/files.css
+++ b/css/files.css
@@ -386,32 +386,23 @@ button {
 }
 
 .wrapper {
-  display: grid;
+  display: flex;
+  margin: 20px;
   gap: 20px;
-  grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
-  padding-bottom: 20px;
-  margin-left: 20px;
-  margin-right: 20px;
+  flex-direction: row-reverse;
+  align-items: flex-start;
 }
-@media (max-width:767px) {
+@media (max-width: 767px) {
   .wrapper {
-    grid-template-columns: minmax(200px, 1fr);
-    margin-left: 10px;
-    margin-right: 10px;
+    flex-direction: column;
+    align-items: normal;
   }
-}
-
-.wrapper {
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 }
 .wrapper .files-stats {
   background-color: white;
   border-radius: 10px;
   padding: 20px;
-  grid-column: 4/5;
-  grid-row: 1/3;
-  grid-row: 1/3;
-  grid-row: 1/3;
+  min-width: 260px;
 }
 .wrapper .files-stats > div {
   padding: 10px;
@@ -478,30 +469,36 @@ button {
 .wrapper .files-stats .upload:hover {
   background-color: #3d38d3;
 }
-.wrapper .file {
+.wrapper .files {
+  display: grid;
+  gap: 20px;
+  flex: 1;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+}
+.wrapper .files .file {
   background-color: white;
   padding: 20px;
   border-radius: 10px;
 }
-.wrapper .file .icon {
+.wrapper .files .file .icon {
   text-align: center;
   margin-bottom: 15px;
 }
-.wrapper .file .icon img {
+.wrapper .files .file .icon img {
   width: 64px;
   height: 64px;
   max-width: 100%;
 }
-.wrapper .file .file-name {
+.wrapper .files .file .file-name {
   text-align: center;
   font-size: 14px;
   margin-bottom: 15px;
 }
-.wrapper .file .name {
+.wrapper .files .file .name {
   color: #A89CA0;
   font-size: 13px;
 }
-.wrapper .file .info {
+.wrapper .files .file .info {
   display: flex;
   justify-content: space-between;
   align-items: center;
