--- a/css/sass/pages/_courses.scss
+++ b/css/sass/pages/_courses.scss
@@ -1,12 +1,18 @@
 .wrapper{
-    grid-template-columns: repeat(auto-fill,minmax(350px,1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    @media (max-width: 767px) {
+        grid-template-columns: minmax(200px, 1fr);
+        margin-left: 10px;
+        margin-right: 10px;
+        gap: 10px;
+    }
     .course{
         position: relative;
         background-color: white;
         border-radius: $rad10;
         overflow: hidden;
         .course-img{
-            max-width: 100%
+            max-width: 100%;
         }
         .trainer-img{
             @include circle(64px);
@@ -23,7 +29,7 @@
             }
             p{
                 color: $gray-color;
-                font-size: 14px;
+                font-size: 13px;
                 font-weight: 600;
             }
         }
