--- a/css/sass/pages/_files.scss
+++ b/css/sass/pages/_files.scss
@@ -1,13 +1,18 @@
 .wrapper{
-    grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
+    display: flex;
+    margin: 20px;
+    gap: 20px;
+    flex-direction: row-reverse;
+    align-items: flex-start;
+    @media (max-width: 767px) {
+        flex-direction: column;
+        align-items: normal; 
+    }
     .files-stats{
         background-color: white;
         border-radius: $rad10;
         padding: 20px;
-        grid-column : 4 / 5;
-        grid-row: 1 / 3;
-        grid-row: 1 / 3;
-        grid-row: 1 / 3;
+        min-width: 260px;
         & > div{
             padding: 10px;
             display: flex;
@@ -80,37 +85,43 @@
             }
         }
     }
-    .file{
-        background-color: white;
-        padding: 20px;
-        border-radius: $rad10;
-        .icon{
-            text-align: center;
-            margin-bottom: 15px;
-            img{
-                width: 64px;
-                height: 64px;
-                max-width: 100%;
+    .files{
+        display: grid;
+        gap: 20px;
+        flex: 1;
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+        .file{
+            background-color: white;
+            padding: 20px;
+            border-radius: $rad10;
+            .icon{
+                text-align: center;
+                margin-bottom: 15px;
+                img{
+                    width: 64px;
+                    height: 64px;
+                    max-width: 100%;
+                }
             }
-        }
-        .file-name{
-            text-align: center;
-            font-size: 14px;
-            margin-bottom: 15px;
-        }
-        .name{
-            color: $gray-color;
-            font-size: 13px;
-        }
-        .info{
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-top: 10px;
-            padding-top: 10px;
-            border-top: 1px solid $gray-third-color;
-            color: $gray-color;
-            font-size: 13px;
+            .file-name{
+                text-align: center;
+                font-size: 14px;
+                margin-bottom: 15px;
+            }
+            .name{
+                color: $gray-color;
+                font-size: 13px;
+            }
+            .info{
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                margin-top: 10px;
+                padding-top: 10px;
+                border-top: 1px solid $gray-third-color;
+                color: $gray-color;
+                font-size: 13px;
+            }
         }
     }
 }
