--- a/css/sass/pages/_team.scss
+++ b/css/sass/pages/_team.scss
@@ -1,5 +1,11 @@
 .wrapper{
-    grid-template-columns: repeat(auto-fill,minmax(350px,1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    @media (max-width: 767px) {
+        grid-template-columns: minmax(200px, 1fr);
+        margin-left: 10px;
+        margin-right: 10px;
+        gap: 10px;
+    }
     .member{
         background-color: white;
         padding: 20px;
@@ -57,12 +63,13 @@
                 color: $gray-color;
             }
             div{
-                
+                display: flex;
                 a{
                     color: white;
                     padding: 4px 10px;
                     border-radius: $rad6;
                     font-size: 13px;
+                    margin-right: 5px;
                 }
                 .profile{
                     background-color: $blue-color;
